syntax = "proto3";
package apisvc;
option go_package = "kwil/x/proto/apipb";

enum DataType {
	INVALID_TYPE = 0;
	STRING = 1;
	INT32 = 2;
	INT64 = 3;
	BOOLEAN = 4;
}

enum AttributeType {
	INVALID_ATTRIBUTE = 0;
	PRIMARY_KEY = 1;
	UNIQUE = 2;
	NOT_NULL = 3;
	DEFAULT = 4;
	MIN = 5;
	MAX = 6;
	MIN_LENGTH = 7;
	MAX_LENGTH = 8;
}

enum IndexType {
    INVALID_INDEX = 0;
    BTREE = 1;
}

enum ModifierType {
	INVALID_MODIFIER = 0;
	NO_MODIFIER = 1;
	CALLER = 2;
}

enum QueryType {
	QUERY_INVALID = 0;
	QUERY_SELECT = 1;
	QUERY_INSERT = 2;
	QUERY_UPDATE = 3;
	QUERY_DELETE = 4;
}