syntax = "proto3";
package pgschemapb;
option go_package = "kwil/x/proto/pgschemapb";

message CType {
    string value = 1;
}
message UserDefinedType {
    string type = 1;
}
message ArrayType {
    string type = 1;
}
message BitType {
    string type = 1;
    int64 width = 2;
}
message IntervalType {
    string type = 1;
    string field = 2;
    optional int64 precision = 3;
}
message NetworkType {
    string type = 1;
    int64 width = 2;
}
message CurrencyType {
    string type = 1;
    int64 precision = 2;
    string sequence_name = 3;
}
message UUIDType {
    string type = 1;
}
message XMLType {
    string type = 1;
}

message Type {
    oneof value {
        CType c_type = 20;
        UserDefinedType user_defined_type = 21;
        ArrayType array_type = 22;
        BitType bit_type = 23;
        IntervalType interval_type = 24;
        NetworkType network_type = 25;
        CurrencyType currency_type = 26;
        UUIDType uuid_type = 27;
        XMLType xml_type = 28;
    }
}


message Sequence {
    int64 start = 1;
    int64 increment = 2;
    int64 last = 3;
}
message PartitionPart {
    oneof expr {
        string literal = 1;
        string raw_expr = 2;
    }
    repeated string columns = 3;
    repeated Attr attrs = 4;
}


message ConstraintTypeAttr {
    string type = 1;
}
message IdentityAttr {
    string generation = 1;
    Sequence sequence = 2;
}
message IndexTypeAttr {
    string type = 1;
}
message IndexPredicateAttr {
    string predicate = 1;
}
message IndexColumnPropertyAttr {
    bool nulls_first = 1;
    bool nulls_last = 2;
}
message IndexStorageParamsAttr {
    bool auto_summarize = 1;
    int64 pages_per_range = 2;
}
message IndexIncludeAttr {
    repeated string columns = 1;
}
message NoInheritAttr {}
message CheckColumnsAttr {
    repeated string columns = 1;
}
message PartitionAttr {
    string type = 1;
    repeated PartitionPart parts = 2;
}
message Attr {
    oneof value {
        ConstraintTypeAttr constraint_type_attr = 20;
        IdentityAttr identity_attr = 21;
        IndexTypeAttr index_type_attr = 22;
        IndexPredicateAttr index_predicate_attr = 23;
        IndexColumnPropertyAttr index_column_property_attr = 24;
        IndexStorageParamsAttr index_storage_params_attr = 25;
        IndexIncludeAttr index_include_attr = 26;
        NoInheritAttr no_inherit_attr = 27;
        CheckColumnsAttr check_columns_attr = 28;
        PartitionAttr partition_attr = 29;
    }
}