syntax = "proto3";
package schemapb;
option go_package = "kwil/x/proto/schemapb";

import "kwil/schema/schema.proto";


message IfExists {}
message IfNotExists {}

message Clause {
    oneof value {
        IfExists if_exists = 1;
        IfNotExists if_not_exists = 2;
    }
}

message Change {
    oneof value {
        AddSchema add_schema = 1;
        DropSchema drop_schema = 2;
        ModifySchema modify_schema = 3;
        AddTable add_table = 4;
        DropTable drop_table = 5;
        ModifyTable modify_table = 6;
        RenameTable rename_table = 7;
        AddColumn add_column = 8;
        DropColumn drop_column = 9;
        ModifyColumn modify_column = 10;
        RenameColumn rename_column = 11;
        AddIndex add_index = 12;
        DropIndex drop_index = 13;
        ModifyIndex modify_index = 14;
        RenameIndex rename_index = 15;
        AddForeignKey add_foreign_key = 16;
        DropForeignKey drop_foreign_key = 17;
        ModifyForeignKey modify_foreign_key = 18;
        AddCheck add_check = 19;
        DropCheck drop_check = 20;
        ModifyCheck modify_check = 21;
        AddAttr add_attr = 22;
        DropAttr drop_attr = 23;
        ModifyAttr modify_attr = 24;
    }
}

message AddSchema {
    Schema schema = 1;
    repeated Clause extra = 2;
}

message DropSchema {
    Schema schema = 1;
    repeated Clause extra = 2;
}

message ModifySchema {
    Schema schema = 1;
    repeated Change changes = 2;
}

message AddTable {
    Table table = 1;
    repeated Clause extra = 2;
}

message DropTable {
    Table table = 1;
    repeated Clause extra = 2;
}

message ModifyTable {
    Table table = 1;
    repeated Change changes = 2;
}

message RenameTable {
    Table from = 1;
    Table to = 2;
}

message AddColumn {
    Column column = 1;
}

message DropColumn {
    Column column = 1;
}

message ModifyColumn {
    Column from = 1;
    Column to = 2;
    uint64 change_kind = 3;
}

message RenameColumn {
    Column from = 1;
    Column to = 2;
}

message AddIndex {
    Index index = 1;
}

message DropIndex {
    Index index = 1;
}

message ModifyIndex {
    Index from = 1;
    Index to = 2;
    uint64 change_kind = 3;
}

message RenameIndex {
    Index from = 1;
    Index to = 2;
}

message AddForeignKey {
    ForeignKey fk = 1;
}

message DropForeignKey {
    ForeignKey fk = 1;
}

message ModifyForeignKey {
    ForeignKey from = 1;
    ForeignKey to = 2;
    uint64 change_kind = 3;
}

message AddCheck {
    Check check = 1;
}

message DropCheck {
    Check check = 1;
}

message ModifyCheck {
    Check from = 1;
    Check to = 2;
    uint64 change_kind = 3;
}

message AddAttr {
    Attr attr = 1;
}

message DropAttr {
    Attr attr = 1;
}

message ModifyAttr {
    Attr from = 1;
    Attr to = 2;
}
